# aiogram_base_bot

./: .env.example  Makefile  alembic.ini  config.ini  config.ini.example  config.py  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
_database/: models.py  utils.py
config/: telegram.py
database/: __utils.py  config.py  connect.py  models.py  utils.py
database/crud_managers/: __init__.py  base.py  user.py
log/: utils.py
migrations/: env.py
telegram/: __init__.py  bot.py  config.py  enums.py  hyperlinks.py  log.py  objects.py  utils.py
telegram/dispatcher/: __init__.py
telegram/enums/: commands.py  middlewares.py
telegram/filters/: access_level.py  nostate.py
telegram/handlers/: __global_variables.py  __init__.py
telegram/handlers/commands/: _html_mode.py  access.py  admin.py  database.py  getuser.py  inline_keyboard.py  keyboard.py  quiz.py  removeme.py  start.py  users.py
telegram/handlers/messages/: messages.py
telegram/keyboards/inline/: inline_keyboard.py  removeme.py  users.py  utils.py
telegram/keyboards/reply/: keyboard.py  utils.py
telegram/middlewares/: general.py
telegram/states/: htmlmode.py  keyboard.py  quiz.py  users.py
templates/: __init__.py  __utils.py  commands.json  config.py  exceptions.json  middlewares.json  utils.py
templates/enums/: commands.py  exceptions.py  messages.py  middlewares.py
templates/enums/mod_commands/: admin.py  inline_keyboard.py  (+2 more)
templates/jsons/: commands.json  exceptions.json  messages.json
templates/types/: __init__.py
utils/hyperlinks/: __init__.py  config.py
(+12 files in other folders)
